[gd_scene load_steps=13 format=3 uid="uid://cxjls2n6gleb4"]

[ext_resource type="Script" uid="uid://c74ya11w7d28b" path="res://models/player/goal.gd" id="1_sydvp"]
[ext_resource type="Shader" uid="uid://c8045jji6nnmx" path="res://shaders/circle_outline.gdshader" id="2_s1e4e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sj5er"]
resource_local_to_scene = true
shader = ExtResource("2_s1e4e")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/diameter = 0.943872
shader_parameter/thickness = 0.01
shader_parameter/frequency = 40.0
shader_parameter/phase = 0.0
shader_parameter/gap = 0.5

[sub_resource type="Curve" id="Curve_sydvp"]
_data = [Vector2(0.00656455, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.96539, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_3kla8"]
radius = 108.0

[sub_resource type="Gradient" id="Gradient_b08fd"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nd5fw"]
gradient = SubResource("Gradient_b08fd")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_s1e4e"]
resource_name = "Defeat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CircleLight:material:shader_parameter/diameter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.944, 0.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CircleLight:material:shader_parameter/thickness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 0.03]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CircleLight:material:shader_parameter/gap")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 1.0]
}

[sub_resource type="Animation" id="Animation_nd5fw"]
resource_name = "Goal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleLight:material:shader_parameter/thickness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [0.01, 0.05, 0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CircleLight:material:shader_parameter/phase")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 62.82]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CircleLight:material:shader_parameter/gap")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [0.5, 0.05, 0.5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 5.0, 2.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.0, 8.0, 5.0]
}

[sub_resource type="Animation" id="Animation_geynu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CircleLight:material:shader_parameter/thickness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CircleLight:material:shader_parameter/phase")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CircleLight:material:shader_parameter/gap")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CircleLight:material:shader_parameter/diameter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.943872]
}

[sub_resource type="Animation" id="Animation_sydvp"]
resource_name = "Victory"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 8.0, 10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CircleLight:material:shader_parameter/thickness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 0.05]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CircleLight:material:shader_parameter/diameter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.943872, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CircleLight:material:shader_parameter/phase")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CircleLight:material:shader_parameter/gap")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PointLight2D:texture_scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.0, 9.0, 10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_geynu"]
_data = {
&"Defeat": SubResource("Animation_s1e4e"),
&"Goal": SubResource("Animation_nd5fw"),
&"RESET": SubResource("Animation_geynu"),
&"Victory": SubResource("Animation_sydvp")
}

[node name="Goal" type="Node2D"]
script = ExtResource("1_sydvp")

[node name="CircleLight" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_sj5er")
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
color = Color(1, 0, 0, 0.196078)

[node name="ParticleEmitter" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 100.0
direction = Vector2(0, 2)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
damping_min = 100.0
damping_max = 300.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_sydvp")

[node name="GoalArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalArea2D"]
shape = SubResource("CircleShape2D_3kla8")

[node name="PointLight2D" type="PointLight2D" parent="."]
z_index = 500
z_as_relative = false
energy = 3.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_nd5fw")
texture_scale = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_geynu")
}
